<resources>
    <string name="app_name">BookStore</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete_all_books">Delete All Books</string>
    <string name="action_save">Save</string>
    <string name="empty_view_text">Click on the plus 1 button to get started. :)</string>
    <string name="book_name">Book Name:</string>
    <string name="book_view">Book View</string>
    <string name="book_price">Book Price:</string>
    <string name="book_quantity">Book Quantity:</string>
    <string name="book_supplier_name">Supplier Name:</string>
    <string name="book_supplier_phone_number">Supplier Number:</string>
    <string name="book_editor">Book Editor</string>
    <string name="book_details">Book Details</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="delete">Delete Forever</string>
    <string name="add_book">Add new Book</string>
    <string name="edit_book">Edit Book</string>
    <string name="book_name_required">Book Name Required.</string>
    <string name="book_price_required">Book price required.</string>
    <string name="book_quantity_required">Book Quantity Required.</string>
    <string name="supplier_name_required">Supplier Name Required.</string>
    <string name="supplier_phone_required">Supplier Phone Number Required.</string>
    <string name="insert_failed">Insert Failed.</string>
    <string name="insert_successful">Success.</string>
    <string name="update_failed">Update Failed.</string>
    <string name="update_successful">Update Success.</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="deleted_all_products_message">Delete all books?</string>
    <string name="delete_all_dialog_msg">Delete these books?</string>
    <string name="cancel">Cancel</string>
    <string name="quantity_change_msg">Quantity Changed.</string>
    <string name="quantity_finish_msg">Success.</string>
    <string name="delete_product_failed">Delete Failed.</string>
    <string name="delete_product_successful">Delete Successful.</string>
    <string name="delete_dialog_msg">Delete this Book?</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_sale">Sale</string>
</resources>
